[package]
name = "byte-unit-serde"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alekseysidorov/byte-unit-serde"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
include-utils = "0.2"
serde = "1.0"

[dev-dependencies]
pretty_assertions = "1.4.0"

[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
unsafe_code = "deny"

[lints.clippy]
pedantic = "warn"
module_name_repetitions = "allow"
missing_panics_doc = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
