[package]
name = "byte-unit-serde"
description = "De/serialization functions for byte-unit crate."
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alekseysidorov/byte-unit-serde"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
byte-unit = { version = "5", features = ["serde"] }
include-utils = "0.2"
serde = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pretty_assertions = "1.4.0"

[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
unsafe_code = "forbid"

[lints.clippy]
# pedantic = "warn"
# module_name_repetitions = "allow"
# missing_panics_doc = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
